refactor: admineventservice